src/assets/main.less
// out: false
@import './theme.less';

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  font-weight: normal;
}

html,
body {
  height: 100%;
  padding: 0;
  margin: 0;
}

body {
  color: var(--text-color);
  background: var(--bg-color);
  transition:
    color 0.5s,
    background-color 0.5s;
  line-height: 1.6;
  font-family:
    Inter,
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    'Fira Sans',
    'Droid Sans',
    'Helvetica Neue',
    sans-serif;
  font-size: 15px;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-tap-highlight-color: transparent;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  display: flex;
}

#app {
  display: flex;
  width: 100%;
  min-height: 100%;
}

button {
  appearance: none;

  cursor: pointer;
  border: none;
  background: none;
  padding: 0;
  font-size: inherit;
  color: inherit;

  background: var(--btn-bg-color);
  color: var(--btn-text-color);
  border: 0;
  outline: 0;

  border-radius: var(--btn-border-radius);

  &:hover {
    background: var(--main-color-30);
  }
}

